Se corrige verificacion de login (Backend)

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 <h1 class="titulo">Registro</h1>
 
 <div class="contenedor_form">
-    <form id="form">
+    <form id="registro">
         <label for="nombre">Usuario</label><br>
-        <input type="text" id="nombre" name="nombre" value="John"><br>
+        <input type="text" id="nombre" name="nombre"><br>
         <label for="contrasenia">Contraseña</label><br>
-        <input type="text" id="contrasenia" name="contrasenia" value="John"><br>
+        <input type="text" id="contrasenia" name="contrasenia"><br>
         <label for="correo">Correo</label><br>
-        <input type="text" id="correo" name="correo" value="Doe"><br><br>
+        <input type="text" id="correo" name="correo"><br><br>
         <input type="submit">
     </form>
 
