--- a/login.html
+++ b/login.html
@@ -3,21 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+
+    <style>
+        .titulo{
+            text-align: center;
+        }
+        .contenedor_form{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .form{
+            text-align: center;
+
+        }
+
+        #fname{
+            margin: 30px;
+        }
+        #lname{
+            margin: 30px;
+        }
+
+    </style>
+    <title>Ingresar</title>
 </head>
 <body>
-<section class="box_principal" >
-    <h1>Bienvenido a Banco Usurero</h1>
-    <form class="login">
-        <input type="text" name="name" id="name" placeholder="Nombre">
-        <input type="password" name="password" id="password" placeholder="Contrasena">
-        <button type="submit">LOGIN</button>
-    </form>
-    <a href="http://">Olvidaste tu contrasena?</a>
-    <a href="http://">Eres nuevo?</a>
-</section>
+<h1 class="titulo">Login</h1>
 
-<script src="./login.js"></script>
+<div class="contenedor_form">
+    <form id="login">
+        <label for="nombre">Usuario</label><br>
+        <input type="text" id="nombre" name="nombre"><br>
+        <label for="contrasenia">Contraseña</label><br>
+        <input type="text" id="contrasenia" name="contrasenia"><br>
+        <input type="submit">
+    </form>
+
+</div>
+
+<script src="./front.js"></script>
+
 </body>
 </html>
