Se interactua login con pagina de inicio y se guarda informacion en localstorage, se implementa  middleware, limite de peticiones y seguridad a la API

--- a/index.html
+++ b/index.html
@@ -38,14 +38,17 @@
         <input type="text" id="nombre" name="nombre"><br>
         <label for="contrasenia">Contraseña</label><br>
         <input type="text" id="contrasenia" name="contrasenia"><br>
+        <label for="edad">Edad</label><br>
+        <input type="number" id="edad" name="edad"><br>
         <label for="correo">Correo</label><br>
         <input type="text" id="correo" name="correo"><br><br>
         <input type="submit">
     </form>
+    <a href="./login.html">Ya estoy registrado</a>
 
 </div>
 
-<script src="./front.js"></script>
+<script src="./registro.js"></script>
 
 </body>
 </html>
