--- a/login.html
+++ b/login.html
@@ -40,10 +40,10 @@
         <input type="text" id="contrasenia" name="contrasenia"><br>
         <input type="submit">
     </form>
-
+    <a href="./index.html">Registrate</a>
 </div>
 
-<script src="./front.js"></script>
+<script src="./login.js"></script>
 
 </body>
 </html>
